Install dependency libc++1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
         packages:
             - clang-5.0
             - libbsd-dev
+            - libc++1
             - libkqueue-dev
             - qt59qbs
 
